WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189865
Web Inspector: dock buttons disappear if Web Inspector goes fullscreen
https://bugs.webkit.org/show_bug.cgi?id=189865
Summary
Web Inspector: dock buttons disappear if Web Inspector goes fullscreen
Blaze Burg
Reported
2018-09-21 16:09:52 PDT
.
Attachments
Patch
(2.01 KB, patch)
2018-09-21 16:14 PDT
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2018-09-21 16:10:11 PDT
<
rdar://problem/42600534
>
Blaze Burg
Comment 2
2018-09-21 16:14:05 PDT
Created
attachment 350451
[details]
Patch
Matt Baker
Comment 3
2018-09-21 16:36:21 PDT
Comment on
attachment 350451
[details]
Patch r=me. This behavior is *much* nicer.
WebKit Commit Bot
Comment 4
2018-09-21 17:14:14 PDT
Comment on
attachment 350451
[details]
Patch Clearing flags on attachment: 350451 Committed
r236375
: <
https://trac.webkit.org/changeset/236375
>
WebKit Commit Bot
Comment 5
2018-09-21 17:14:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug